# SENTINEL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REMAINING.md
.github/workflows/: ci.yml  release.yml
cmake/: CPackConfig.cmake
data/: .gitignore  README.md  manifest.json
data/co_offending/: chicago_arrests_sample.csv  chicago_co_offending.csv  moreno_person_crime.csv
data/scripts/: fetch_datasets.ps1  fetch_datasets.py
data/weather/: london_2024_h1.json
docs/: ANALYST_GUIDE.md  ARCHITECTURE.md  DATA_STRUCTURES.md  MODELS.md  REAL_DATA_EVALUATION.md  RELEASE.md  ROADMAP.md  TESTING.md
installer/: sentinel_installer.nsi
packaging/linux/: build_release.sh  build_wsl.sh  sentinel.desktop
packaging/windows/: build_mingw.ps1  build_msvc.bat  build_release.ps1  deploy_portable.ps1  install_local.ps1  install_windows_sdk.ps1  sentinel.nsi
resources/: sentinel.qrc
resources/styles/: dark.qss
scripts/: check_eval_thresholds.ps1  check_eval_thresholds.sh  run_real_data_tests.ps1  run_real_data_tests.sh
src/: main.cpp
src/api/: LocalApiServer.cpp  LocalApiServer.h
src/audit/: ProvenanceLog.cpp  ProvenanceLog.h
src/benchmark/: BenchmarkMetrics.cpp  BenchmarkMetrics.h  BiasAuditor.cpp  BiasAuditor.h  CalibrationAnalyser.cpp  CalibrationAnalyser.h
src/core/: AppConfig.cpp  AppConfig.h  CrimeEvent.h  DataExporter.cpp  DataExporter.h  Database.cpp  Database.h  SentinelLogger.cpp  SentinelLogger.h  UpdateChecker.cpp  UpdateChecker.h
src/inference/: AnomalyDetector.cpp  AnomalyDetector.h  CoOffendingAnalyser.cpp  CoOffendingAnalyser.h  EvidenceScorer.cpp  EvidenceScorer.h  GeographicProfiler.cpp  GeographicProfiler.h  HintEngine.cpp  HintEngine.h  LeadReportGenerator.cpp  LeadReportGenerator.h  MOAnalyser.cpp  MOAnalyser.h
src/ingest/: CsvImporter.cpp  CsvImporter.h  DataQualityScorer.cpp  DataQualityScorer.h  DataSource.h  IngestEnricher.cpp  IngestEnricher.h  UKPoliceSource.cpp  UKPoliceSource.h  WeatherSource.cpp  WeatherSource.h
src/models/: BayesianHierarchical.cpp  BayesianHierarchical.h  EnsemblePredictor.cpp  EnsemblePredictor.h  GPRegression.cpp  GPRegression.h  HawkesProcess.cpp  HawkesProcess.h  KDEHotspot.cpp  KDEHotspot.h  NearRepeatVictimisation.cpp  NearRepeatVictimisation.h  PoissonBaseline.cpp  PoissonBaseline.h  RiskForecaster.cpp  RiskForecaster.h  SeriesDetector.cpp  SeriesDetector.h  TemporalFeatures.cpp  TemporalFeatures.h
src/nlp/: CrimeClassifier.cpp  CrimeClassifier.h  MOExtractor.cpp  MOExtractor.h
src/ui/: AnalyticsWidget.cpp  AnalyticsWidget.h  AuditLogWidget.cpp  AuditLogWidget.h  CalibrationDashboardWidget.cpp  CalibrationDashboardWidget.h  CaseWorkspaceWidget.cpp  CaseWorkspaceWidget.h  CoOffendingGraphWidget.cpp  CoOffendingGraphWidget.h  DashboardWidget.cpp  DashboardWidget.h  DebugConsoleWidget.cpp  DebugConsoleWidget.h  EventsTableWidget.cpp  EventsTableWidget.h  GeoProfileHeatmapWidget.cpp  GeoProfileHeatmapWidget.h  LeadsWidget.cpp  LeadsWidget.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  SettingsWidget.cpp  SettingsWidget.h  TemporalHeatmapWidget.cpp  TemporalHeatmapWidget.h
tests/: CMakeLists.txt  test_advanced_pipeline_integration.cpp  test_all_models_perf.cpp  test_analytics_widget_data.cpp  test_analytics_widget_deep2.cpp  test_analytics_widget_deep3.cpp  test_analytics_widget_deep4.cpp  test_analytics_widget_deep5.cpp  test_analytics_widget_deep6.cpp  test_anomaly_accuracy.cpp  test_anomaly_detector_accuracy.cpp  test_anomaly_detector_advanced.cpp  test_anomaly_detector_deep.cpp  test_anomaly_detector_deep10.cpp  test_anomaly_detector_deep2.cpp  test_anomaly_detector_deep3.cpp  test_anomaly_detector_deep4.cpp  test_anomaly_detector_deep5.cpp  test_anomaly_detector_deep6.cpp  test_anomaly_detector_deep7.cpp  test_anomaly_detector_deep8.cpp  test_anomaly_detector_deep9.cpp  test_anomaly_edge_cases.cpp  test_anomaly_geo.cpp  test_app_config.cpp  test_appconfig_benchmark_deep.cpp  test_appconfig_database_deep.cpp  test_appconfig_deep2.cpp  test_appconfig_deep3.cpp  test_appconfig_deep4.cpp  test_appconfig_deep5.cpp  test_appconfig_deep6.cpp  test_appconfig_deep7.cpp  test_appconfig_edge_cases.cpp  test_appconfig_roundtrip.cpp  test_audit_log_deep2.cpp  test_audit_log_deep3.cpp  test_audit_log_deep4.cpp  test_audit_log_deep5.cpp  test_audit_log_deep6.cpp  (+457 more)
tests/data/: london_crimes_2024.csv
